# ai-cognitive-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.ollama.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sync_to_wsl.sh
app/admin/: api_keys.py  auth.py  config_manager.py  router.py
app/admin/static/: index.html
app/api/: openai_compat.py  routes.py
app/cache/: __init__.py  store.py
app/core/: audit.py  config.py  database.py  doctrine.py  logging.py  metrics.py  ratelimit.py
app/engines/: __init__.py  ollama_engine.py  openai_compat_engine.py
app/feedback/: __init__.py  store.py
app/gateway/: engine.py  scheduler.py
app/governance/: engine.py  judge.py  legislature.py  policy_init.py  semantic.py
app/memory/: layers.py  store.py
app/prompts/: templates.py
app/providers/: base.py  client.py  mock.py  model_validator.py  ollama.py  openai_compatible.py  registry.py
app/tokenflow/: counter.py  tracker.py
deploy/: logrotate.conf
docs/: engineering-roadmap.md  project-management.md
tests/: test_api.py  test_new_features.py
tests/benchmark/: run.py  test_latency.py
