[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cognitive-gateway"
version = "1.4.0"
description = "AI Cognitive Gateway — Unified Control Plane for LLM Requests"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Cognitive Gateway Contributors"},
]
keywords = ["llm", "gateway", "ai", "governance", "proxy"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
prod = []

[project.urls]
Homepage = "https://github.com/sunshinecoke369/ai-cognitive-gateway"
Source = "https://github.com/sunshinecoke369/ai-cognitive-gateway"
BugTracker = "https://github.com/sunshinecoke369/ai-cognitive-gateway/issues"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
